--- a/.gitignore
+++ b/.gitignore
@@ -1,29 +1,5 @@
-#built application files
-*.apk
-*.ap_
-
-# files for the dex VM
-*.dex
-
-# Java class files
-*.class
-
-# generated files
-bin/
-gen/
-
 # Local configuration file (sdk path, etc)
 local.properties
-
-# Windows thumbnail db
-Thumbs.db
-
-# OSX files
-.DS_Store
-
-# Eclipse project files
-.classpath
-.project
 
 # Android Studio
 *.iml
@@ -33,4 +9,5 @@ Thumbs.db
 build/
 
 #NDK
-obj/
+app/libs/
+app/src/main/res/drawable/
