--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,6 +4,7 @@
 
     <application
         android:allowBackup="true"
+        android:fullBackupContent="@xml/backup_descriptor"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -18,6 +19,29 @@
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".DeepLinkActivity"
+            android:label="DeepLinkActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.VIEW" />
+
+                <category android:name="android.intent.category.DEFAULT" />
+                <category android:name="android.intent.category.BROWSABLE" />
+                <!-- Accepts URIs that begin with "sdesign2://activity/deeplinkactivity” -->
+                <data
+                    android:host="activity"
+                    android:pathPrefix="/deeplinkactivity"
+                    android:scheme="sdesign2" />
+            </intent-filter>
+        </activity>
+        <activity
+            android:name=".SurveyActivity"
+            android:label="@string/survey_activity_label"
+            android:parentActivityName=".MainActivity">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="edu.fiu.sdgroup6.bluetoothtimer.MainActivity" />
         </activity>
     </application>
 
