Major code change using android examples for WiFi Direct

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -44,7 +44,7 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".SurveyActivity"
+            android:name=".WiFiDirectActivity"
             android:label="@string/survey_activity_label"
             android:parentActivityName=".MainActivity">
             <meta-data
