--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,7 @@
         <!-- Used for transferring files  after a successful connection -->
 
 
+        <service android:name=".FileTransferService" />
     </application>
 
 </manifest>
